Fix overlay stuck after copy and fix button height

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -145,7 +145,7 @@ border: solid black 1px;
 }
 
 .feedback{
-  /*margin-top:50px;*/
+  line-height: 29px;
   font-size:20px;
   font-weight:600;
   display:inline-block;
@@ -154,14 +154,14 @@ border: solid black 1px;
 
 .save{
   color: white;
-text-decoration: none;
-float: right;
-font-weight: 600;
-background-color: #ff99a8;
-padding: 11px;
-padding-right: 20px;
-padding-left: 20px;
-cursor:pointer;
+  text-decoration: none;
+  float: right;
+  font-weight: 600;
+  background-color: #ff99a8;
+  padding: 11px;
+  padding-right: 20px;
+  padding-left: 20px;
+  cursor:pointer;
 }
 
 .save:hover{
@@ -326,16 +326,16 @@ padding: 25px;
     height:43px;
 }
 
-.deel{
+.deel {
   background-color: grey;
-    color: white;
-    margin: 5px;
-    padding: 4px;
-    font-size: 11px;
-    cursor: pointer;
-    display:inline-block;
-    vertical-align:center;
-    text-transform: uppercase;
+  color: white;
+  margin: 3px 15px 20px;
+  padding: 4px;
+  font-size: 11px;
+  cursor: pointer;
+  display: inline-block;
+  vertical-align: top;
+  text-transform: uppercase;
 }
 
 .deel:hover{
